<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/preferences_interface_homescreen_title" android:key="ui_homescreen"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:launcher="http://schemas.android.com/apk/res/com.cyanogenmod.trebuchet">
    <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category" android:key="ui_homescreen_general">
        <com.cyanogenmod.trebuchet.preference.DoubleNumberPickerPreference android:title="@string/preferences_interface_homescreen_general_grid_title" android:key="ui_homescreen_grid" android:summary="@string/preferences_interface_homescreen_general_grid_summary" launcher:defaultValue1="@integer/target_cell_count_x" launcher:defaultValue2="@integer/target_cell_count_y" launcher:max1="@integer/config_maxWorkspaceRows" launcher:min1="3" launcher:max2="@integer/config_maxWorkspaceColumns" launcher:min2="3" launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title" launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title" />
        <com.cyanogenmod.trebuchet.preference.NumberPickerPreference android:title="@string/preferences_interface_homescreen_general_screens_title" android:key="ui_homescreen_screens" android:summary="@string/preferences_interface_homescreen_general_screens_summary" android:defaultValue="5" launcher:max="7" launcher:min="1" />
        <com.cyanogenmod.trebuchet.preference.NumberPickerPreference android:title="@string/preferences_interface_homescreen_general_default_screen_title" android:key="ui_homescreen_default_screen" android:summary="@string/preferences_interface_homescreen_general_default_screen_summary" android:defaultValue="3" launcher:max="5" launcher:min="1" launcher:maxExternal="ui_homescreen_screens" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_general_stretch_screens_title" android:key="ui_homescreen_stretch_screens" android:summary="@string/preferences_interface_homescreen_general_stretch_screens_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_general_search_title" android:key="ui_homescreen_general_search" android:summary="@string/preferences_interface_homescreen_general_search_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_general_hide_icon_labels_title" android:key="ui_homescreen_general_hide_icon_labels" android:summary="@string/preferences_interface_homescreen_general_hide_icon_labels_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_interface_homescreen_scrolling_category">
        <ListPreference android:entries="@array/preferences_interface_homescreen_scrolling_transition_effect_entries" android:title="@string/preferences_interface_homescreen_scrolling_transition_effect_title" android:key="ui_homescreen_scrolling_transition_effect" android:summary="@string/preferences_interface_homescreen_scrolling_transition_effect_summary" android:defaultValue="@string/config_workspaceDefaultTransitionEffect" android:entryValues="@array/preferences_interface_homescreen_scrolling_transition_effect_values" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_title" android:key="ui_homescreen_scrolling_scroll_wallpaper" android:summary="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_scrolling_wallpaper_hack_title" android:key="ui_homescreen_scrolling_wallpaper_hack" android:summary="@string/preferences_interface_homescreen_scrolling_wallpaper_hack_summary" android:defaultValue="@bool/config_workspaceDefaultWallpaperHack" />
        <com.cyanogenmod.trebuchet.preference.NumberPickerPreference android:title="@string/preferences_interface_homescreen_scrolling_wallpaper_size_title" android:key="ui_homescreen_scrolling_wallpaper_size" android:summary="@string/preferences_interface_homescreen_scrolling_wallpaper_size_summary" android:defaultValue="2" launcher:max="5" launcher:min="2" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_title" android:key="ui_homescreen_scrolling_fade_adjacent_screens" android:summary="@string/preferences_interface_homescreen_scrolling_fade_adjacent_screens_summary" android:defaultValue="@bool/config_workspaceDefualtFadeInAdjacentScreens" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_scrolling_show_outlines_title" android:key="ui_homescreen_scrolling_show_outlines" android:summary="@string/preferences_interface_homescreen_scrolling_show_outlines_summary" android:defaultValue="@bool/config_workspaceDefaultShowOutlines" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_interface_homescreen_indicator_category">
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_indicator_enable_title" android:key="ui_homescreen_indicator_enable" android:summary="@string/preferences_interface_homescreen_indicator_enable_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preferences_interface_homescreen_indicator_fade_title" android:key="ui_homescreen_indicator_fade" android:summary="@string/preferences_interface_homescreen_indicator_fade_summary" android:dependency="ui_homescreen_indicator_enable" android:defaultValue="true" />
        <ListPreference android:entries="@array/preferences_interface_homescreen_indicator_position_entries" android:title="@string/preferences_interface_homescreen_indicator_position_title" android:key="ui_homescreen_indicator_position" android:summary="@string/preferences_interface_homescreen_indicator_position_summary" android:dependency="ui_homescreen_indicator_enable" android:defaultValue="0" android:entryValues="@array/preferences_interface_homescreen_indicator_position_values" />
    </PreferenceCategory>
</PreferenceScreen>